--- a/public/css/footer.css
+++ b/public/css/footer.css
@@ -10,7 +10,6 @@ footer{
     background: lightgray;
     height: 350px;
     width:100%;
-    padding-left:25%; 
 }
 
 footer #left{
@@ -21,8 +20,6 @@ footer #left{
 footer #center{
     float:left;
     width:150px;
-    margin-left:40px;
-    margin-right:40px;
 }
 
 footer #right{
@@ -35,6 +32,11 @@ footer h1{
 }
 
 footer ul{
-    margin-left:-37px;
     list-style: none;
+}
+
+#footer-container{
+    margin-left: auto;
+    margin-right: auto;
+    width: 800px;
 }
