--- a/public/css/node.css
+++ b/public/css/node.css
@@ -1,31 +1,107 @@
 /* 
-    Document   : node
-    Created on : 22-abr-2013, 19:53:30
-    Author     : Julio
-    Description:
-        Purpose of the stylesheet follows.
+	Proyect		: foodprise
+    Document	: style.css
+    Created on	: 04-may-2013
+    Author		: Julio Perdiguer @
+    			  Alex Pinto @ www.alexconcept.com
 */
 
-#node-list{
-    width:600px;
-    margin-left: auto;
-    margin-right: auto;
+section {
+    width:780px;
+    margin: 0 auto;
+    text-align: center;
 }
 
-.node-container{
-    background-color: white;
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    width:auto;
-    height:auto;
-    padding: 10px;
-    margin:10px;
+article {
+	text-align: center;
+	margin-bottom: 55px;
 }
 
-.node-image{
-    -webkit-border-radius: 15px;
-    -moz-border-radius: 15px;
-    border-radius: 15px;
-    overflow: hidden;
+/* INTRO */
+
+article.intro {
+	margin-left: 55px;
+}
+
+header.intro-info {
+	position: absolute;
+	width: 760px;
+}
+
+header.intro-info .f-yellow {
+	margin: 0 auto;
+	margin-top: 7%;
+}
+
+header.intro-info p {
+	font-size: 14px;
+	color: #fff;
+	font-style: italic;
+	line-height: 10px;
+}
+
+header.intro-info p.title {
+	font-size: 21px;
+	font-weight: bold;
+}
+
+/* LIST */
+
+section img {
+	width: 700px;
+	height: auto;
+	padding: 10px;
+	background: #fff;
+}
+
+section img.avatar {
+	width: 45px;
+	height: 45px;
+	padding: 0;
+	margin-right: 10px;
+	border: none;
+	float: left;
+}
+
+ul.image-list {
+	list-style: none;
+	width: 720px;
+	padding: 0;
+	float: right;
+	margin: 0 0 10px 0;	
+	position: relative;
+}
+
+ul.image-list li {
+	margin-bottom: -3px;
+	cursor: pointer;
+}
+
+ul.image-list li a {
+	position: absolute;
+	left: 42%;
+	top: 47%;
+}
+
+ul.image-list ul {
+	list-style: none;
+	display: none;
+	position: absolute;
+	background: rgba(0, 0, 0, 0.2);
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+ul.image-list:hover ul {
+	display: block;
+}
+
+article p {
+	color: #a0a0a0;
+	font-size: 16px;
+	line-height: 10px;
 }
