--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,9 @@
 /* 
-    Document   : style
-    Created on : 12-abr-2013, 11:59:56
-    Author     : xavier.antolin
-    Description:
-        Purpose of the stylesheet follows.
+	Proyect		: foodprise
+    Document	: style.css
+    Created on	: 04-may-2013
+    Author		: Julio Perdiguer @
+    			  Alex Pinto @ www.alexconcept.com
 */
 
 body{
@@ -13,16 +13,407 @@ body{
     background-color:#e2e8ec;
 }
 
+#content {
+	width: 1000px;
+	height: 100%;
+	margin: 20px auto;
+}
+
+#food-prise {
+	margin-bottom: 40px;
+	padding-left: 22px;
+}
+
+header {
+	position: relative;
+}
+
 h1{
     font-family:'Myriad Pro';
 }
 
 #wrapper{
     height: auto;
-    min-height: 700px;
 }
 
 a{
     text-decoration: none;
     color: white;
 }
+
+/*
+MENU
+*/
+
+nav {
+	width: 1000px;
+	height: 92px;
+	margin-bottom: 20px;
+}
+
+ul#menu {
+	position: relative;
+	float: left;
+	height: 75px;
+	width: 924px;
+	margin: 9px 0 0 -18px;
+	padding: 0;
+}
+
+ul#menu li {
+	float: left;
+	width: 110px;
+	border-right: 2px solid #fff;
+	border-left: 1px solid #000;
+	border-top: 4px solid #fff;
+	border-bottom: 4px solid #fff;
+	font-size: 14px;
+	font-family: 'Myriad Pro';
+	text-align: center;
+	color: white;
+	pointer: cursor;
+		background: #b1b1b1;
+		background: -moz-linear-gradient(top,  #b1b1b1 0%, #717171 62%, #717171 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b1b1b1), color-stop(62%,#717171), color-stop(100%,#717171));
+		background: -webkit-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
+		background: -o-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
+		background: -ms-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
+		background: linear-gradient(to bottom,  #b1b1b1 0%,#717171 62%,#717171 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b1b1b1', endColorstr='#717171',GradientType=0 );
+}
+
+ul#menu li:hover {
+		background: #deb80f;
+		background: -moz-linear-gradient(top,  #deb80f 0%, #eaa814 64%, #f19b18 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#deb80f), color-stop(64%,#eaa814), color-stop(100%,#f19b18));
+		background: -webkit-linear-gradient(top,  #deb80f 0%,#eaa814 64%,#f19b18 100%);
+		background: -o-linear-gradient(top,  #deb80f 0%,#eaa814 64%,#f19b18 100%);
+		background: -ms-linear-gradient(top,  #deb80f 0%,#eaa814 64%,#f19b18 100%);
+		background: linear-gradient(to bottom,  #deb80f 0%,#eaa814 64%,#f19b18 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#deb80f', endColorstr='#f19b18',GradientType=0 );
+}
+
+ul#menu li.end {
+	width: 241px;
+	border-right-width: 4px;
+	border-bottom-width: 4px;
+	padding: 14px 0;
+		-webkit-border-top-right-radius: 10px;
+		-webkit-border-bottom-right-radius: 10px;
+		-moz-border-radius-topright: 10px;
+		-moz-border-radius-bottomright: 10px;
+		border-top-right-radius: 10px;
+		border-bottom-right-radius: 10px;
+}
+
+ul#menu li a {
+	display: block;
+	padding: 18px 0;
+}
+
+ul#menu li a.double {
+	display: inline-block;
+	padding: 18px 0;
+}
+
+input.search {
+	background: url(../img/sprites.png) no-repeat 0px -200px;
+	width: 364px;
+	height: 24px;
+	border: none;
+	text-indent: 35px;
+	margin-left: 5px;
+}
+
+input.search:focus, input.search:active {
+	outline: none;
+}
+
+#dropdown{
+    width: 280px;
+    height: auto;
+    margin: 0 auto;
+    display:none;
+    background:-webkit-gradient(linear, left top, left bottom, from(#4e4d50), to(#b3b3b3));
+    background:-moz-linear-gradient(center top , #4e4d50, #b3b3b3) repeat scroll 0 0 #b3b3b3;
+    padding: 40px 0px 0px 40px;
+    position:absolute;
+    left:85px;
+    top:196px;
+    z-index: 9999;
+    text-align: left;
+}
+
+#dropdown ul{
+    list-style-type:none;
+    margin:0;
+    padding:0;
+    font-size: 12px;
+}
+
+#dropdown .option{
+    width: 130px;
+    height: 55px;    
+	font-family: 'Myriad Pro';
+    text-align: left;
+    float:left;
+}
+
+#dropdown .option a:hover {
+	color: #f19b18;
+}
+
+/*
+FORMS
+*/
+
+form.add-form {
+	width: 640px;
+	background: #fff;
+	padding: 40px;
+	margin: 0 auto;
+}
+
+form.add-form label {
+	 font: 16px "Myriad Pro";
+	 line-height: 50px;
+}
+
+form.add-form input, form.add-form textarea, form.add-form select {
+	margin-bottom: 15px;
+}
+
+form.add-form input, form.add-form textarea {
+	max-width: 630px;
+	min-width: 630px;
+	padding: 5px;
+	border: 1px solid #ffcc33;
+}
+
+form.add-form input:focus, form.add-form select:focus, form.add-form input:active, form.add-form select:active, textarea:focus, textarea:active {
+	outline: none;
+	box-shadow: 0 0 8px #ffcc33 !important;
+}
+
+/* === Estilos de Validacion === */
+ 
+input:required:valid, textarea:required:valid {
+    box-shadow: 0 0 5px #5cd053;
+    border-color: #28921f;
+}
+
+input:focus:invalid, textarea:focus:invalid {
+    box-shadow: 0 0 5px #d45252;
+    border-color: #b03535
+}
+
+
+/*
+FOOTER
+*/
+
+footer{
+    background: #f5f5f5;
+    position: absolute;
+    height: auto;
+    width: 1000px;
+    font: 19px "Myriad Pro";
+    padding-bottom: 40px;
+    margin-top: 40px;
+}
+
+#footer-container{
+    margin: 30px auto;
+    width: 960px;
+}
+
+footer #left{
+    float:left;
+    width:240px;
+}
+
+footer #center{
+    float:left;
+    width:240px;
+}
+
+footer #right{
+    float:left;
+    width:480px;
+}
+
+footer .title {
+    text-transform:uppercase;
+    font-size: 18px;
+}
+
+footer p {
+	font-size: 14px;
+	color: #838383;
+}
+
+input#footer-search, input#email-address {
+	font-size: 14px;
+	padding: 6px 5px 3px;
+	border: 1px solid #bbb;
+	line-height: 14px;
+	
+}
+
+input#footer-search {
+	background: url('../img/sprites.png') no-repeat 5px -167px;
+	text-indent: 20px;
+}
+
+footer ul{
+    list-style: none;
+    padding: 0;
+    font-size: 14px;
+}
+
+footer li {
+	margin-right: 20px;
+	padding: 10px 10px 10px 0;
+	border-top: 1px solid #bbb;
+}
+
+footer li.footer-end {
+	border-bottom: 1px solid #bbb;
+}
+
+
+/*
+UTILITIES
+*/
+
+.float-left {float: left;}
+.float-right {float: right;}
+.font-italic {font-style: italic;}
+.font-bold {font-weight: bold;}
+.font-black {color: #000000;}
+
+/*
+ICONS
+*/
+
+.arrowslider, .f-yellow, .facebook, .logo, .pinterest, .twitter, .user, .payment{ background: url(../img/sprites.png) no-repeat; }
+
+a.twitter, a.pinterest, a.facebook {
+	display: block;
+	text-indent: -999px;
+	float: left;
+	margin-right: 10px;
+	opacity: 0.3;
+	overflow: hidden;
+}
+
+.logo{
+	background-position: -150px 0;
+	width: 94px;
+	height: 92px;
+}
+
+.logo.floated {
+	float: left;
+	position: relative;
+	z-index: 2;
+}
+
+.user{
+	background-position: 0 -100px ;
+	width: 56px;
+	height: 45px;
+}
+
+.arrowslider{
+	background-position: -100px -100px ;
+	width: 49px;
+	height: 49px;
+}
+
+.f-yellow{
+	background-position: -295px 0;
+	width: 108px;
+	height: 108px;
+}
+
+.facebook{
+	background-position: -100px -50px ;
+	width: 33px;
+	height: 32px;
+}
+
+.facebook:hover{
+	background-position: -100px 0;
+	opacity: 1;
+}
+
+.pinterest{
+	background-position: -50px -50px ;
+	width: 32px;
+	height: 32px;
+}
+
+.pinterest:hover{
+	background-position: -50px 0;
+	opacity: 1;
+}
+
+.twitter{
+	background-position: 0 0;
+	width: 33px;
+	height: 33px;
+}
+
+.twitter:hover{
+	background-position: 0 -50px ;
+	opacity: 1;
+}
+
+.payment {
+	background-position: 0 -250px ;
+	width: 221px;
+	height: 30px;
+}
+
+/*
+BUTTONS
+*/
+
+button.sign {
+	border: 1px solid #bbb;
+	font: bold 12px "Myriad Pro";
+	height: 28px;
+	line-height: 23px;
+	vertical-align: bottom;
+		-webkit-border-radius: 3px;
+		-moz-border-radius: 3px;
+		border-radius: 3px;
+		background: #ffffff;
+		background: -moz-linear-gradient(top,  #ffffff 0%, #f9f9f9 18%, #cecece 99%, #cecece 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(18%,#f9f9f9), color-stop(99%,#cecece), color-stop(100%,#cecece));
+		background: -webkit-linear-gradient(top,  #ffffff 0%,#f9f9f9 18%,#cecece 99%,#cecece 100%);
+		background: -o-linear-gradient(top,  #ffffff 0%,#f9f9f9 18%,#cecece 99%,#cecece 100%);
+		background: -ms-linear-gradient(top,  #ffffff 0%,#f9f9f9 18%,#cecece 99%,#cecece 100%);
+		background: linear-gradient(to bottom,  #ffffff 0%,#f9f9f9 18%,#cecece 99%,#cecece 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#cecece',GradientType=0 );
+}
+
+button.sign:hover {
+		background: #cecece;
+		background: -moz-linear-gradient(top,  #cecece 0%, #cecece 1%, #f9f9f9 82%, #ffffff 100%);
+		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cecece), color-stop(1%,#cecece), color-stop(82%,#f9f9f9), color-stop(100%,#ffffff));
+		background: -webkit-linear-gradient(top,  #cecece 0%,#cecece 1%,#f9f9f9 82%,#ffffff 100%);
+		background: -o-linear-gradient(top,  #cecece 0%,#cecece 1%,#f9f9f9 82%,#ffffff 100%);
+		background: -ms-linear-gradient(top,  #cecece 0%,#cecece 1%,#f9f9f9 82%,#ffffff 100%);
+		background: linear-gradient(to bottom,  #cecece 0%,#cecece 1%,#f9f9f9 82%,#ffffff 100%);
+		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cecece', endColorstr='#ffffff',GradientType=0 );
+		
+}
+
+input::-moz-focus-inner /*Remove button padding in FF*/
+{ 
+    border: 0;
+    padding: 0;
+}
+
