funcionamiento add Foodprise y Remove Foodprise

--- a/public/css/node.css
+++ b/public/css/node.css
@@ -79,7 +79,7 @@ ul.image-list li {
 	cursor: pointer;
 }
 
-ul.image-list li.x-layer a {
+ul.image-list li.x-layer span {
 	position: absolute;
 	left: 42%;
 	top: 47%;
