--- a/public/css/node.css
+++ b/public/css/node.css
@@ -7,7 +7,7 @@
 */
 
 section {
-    width:780px;
+    width:720px;
     margin: 0 auto;
     text-align: center;
 }
@@ -15,36 +15,25 @@ section {
 article {
 	text-align: center;
 	margin-bottom: 55px;
+	font-family:'Myriad Pro';
 }
 
 /* INTRO */
 
 article.intro {
-	margin-left: 55px;
+	background: white;
+	padding: 10px 0;
+	margin-bottom: 25px;
 }
 
-header.intro-info {
-	position: absolute;
-	width: 722px;
-}
-
-header.intro-info .f-yellow {
-	margin: 0 auto;
-	margin-top: 7%;
-	margin-bottom: 20px;
-}
-
-header.intro-info p {
-	font-size: 14px;
-	color: #fff;
-	font-style: italic;
-	line-height: 30px;
-	margin: 0px 10px;
-}
-
-header.intro-info p.title {
-	font-size: 21px;
-	font-weight: bold;
+article.intro p {
+	display: inline-block;
+	text-align: center;
+	background: #e0091d;
+	color: white;
+	padding: 0 15px;
+	font: italic 21px/38px 'Century Schoolbook';
+	letter-spacing: 2px;
 }
 
 /* LIST */
@@ -54,15 +43,16 @@ section img {
 	height: auto;
 	padding: 10px;
 	background: #fff;
+	border: 1px solid #dfdfe1;
 }
 
 section img.avatar {
 	width: 45px;
 	height: 45px;
 	padding: 0;
-	margin-right: 10px;
+	margin-left: 10px;
 	border: none;
-	float: left;
+	float: right;
 }
 
 ul.image-list {
@@ -81,15 +71,27 @@ ul.image-list li {
 
 ul.image-list li.x-layer span {
 	position: absolute;
-	left: 42%;
-	top: 47%;
+	left: 35%;
+	top: 35%;
+}
+
+ul.image-list li.x-layer span.buttonadd {
+	background: url(../img/sorpresa.png) no-repeat;
+	width: 233px;
+	height: 105px;
+	display: block;
+	opacity: 0.8;
+}
+
+ul.image-list li.x-layer span.buttonadd:hover {
+	opacity: 1;
 }
 
 ul.image-list ul {
 	list-style: none;
 	display: none;
 	position: absolute;
-	background: rgba(0, 0, 0, 0.2);
+	background: rgba(255, 255, 255, 0.2);
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -104,7 +106,12 @@ ul.image-list:hover ul {
 
 article p {
 	color: #a0a0a0;
-	font-size: 16px;
-	line-height: 10px;
+	font-size: 14px;
+	line-height: 8px;
 	margin-left: 55px;
+	text-align: right;
+}
+
+article p.author-node {
+	line-height: 18px;
 }
