--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,13 +10,14 @@ body{
     margin: 0;
     padding: 0;
     font-family:'Century Schoolbook';
-    background-color:#e2e8ec;
+    background-color: white;
 }
 
 #content {
 	width: 1000px;
 	height: 100%;
-	margin: 20px auto;
+	margin: 0 auto;
+	background: #ebebed;
 }
 
 #food-prise {
@@ -24,8 +25,23 @@ body{
 	padding-left: 22px;
 }
 
+#wrapper{
+    height: auto;
+    padding-top: 20px;
+}
+
 header {
 	position: relative;
+	width: 100%;
+	height: 100%;
+	background: #a8a6a6;
+}
+
+#boxes {
+	height: 100%;
+	width: 1000px;
+	margin: 0 auto;
+	background: white;
 }
 
 h1 {
@@ -37,17 +53,14 @@ h2 a {
 	color: black;
 }
 
-#wrapper{
-    height: auto;
-}
-
-a{
+a {
     text-decoration: none;
     color: white;
 }
 
 article p a {
 	color: #a0a0a0;
+	margin-top: 15px;
 }
 
 article p a:hover {
@@ -62,39 +75,30 @@ MENU
 
 nav {
 	width: 1000px;
-	height: 92px;
-	margin-bottom: 20px;
+	height: 45px;
+	margin: 0 auto;
+	padding: 13px 0;
 }
 
 ul#menu {
 	position: relative;
 	float: left;
-	height: 75px;
-	width: 924px;
-	margin: 9px 0 0 -18px;
+	height: auto;
+	width: 710px;
 	padding: 0;
+	margin: 0px 0 0 20px;
 }
 
 ul#menu li {
 	float: left;
-	width: 110px;
-	border-right: 2px solid #fff;
+	width: 91px;
+	border-right: 1px solid #fff;
 	border-left: 1px solid #000;
-	border-top: 3px solid #fff;
-	border-bottom: 3px solid #fff;
 	font-size: 14px;
 	font-family: 'Myriad Pro';
 	text-align: center;
 	color: white;
 	pointer: cursor;
-		background: #b1b1b1;
-		background: -moz-linear-gradient(top,  #b1b1b1 0%, #717171 62%, #717171 100%);
-		background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#b1b1b1), color-stop(62%,#717171), color-stop(100%,#717171));
-		background: -webkit-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
-		background: -o-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
-		background: -ms-linear-gradient(top,  #b1b1b1 0%,#717171 62%,#717171 100%);
-		background: linear-gradient(to bottom,  #b1b1b1 0%,#717171 62%,#717171 100%);
-		filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#b1b1b1', endColorstr='#717171',GradientType=0 );
 }
 
 ul#menu li:hover {
@@ -110,25 +114,18 @@ ul#menu li:hover {
 
 ul#menu li.end {
 	width: 242px;
-	border-right-width: 3px;
-	border-bottom-width: 3px;
-	padding: 14px 0;
-		-webkit-border-top-right-radius: 10px;
-		-webkit-border-bottom-right-radius: 10px;
-		-moz-border-radius-topright: 10px;
-		-moz-border-radius-bottomright: 10px;
-		border-top-right-radius: 10px;
-		border-bottom-right-radius: 10px;
+	border-right: none;
+	padding: 8.2px 0;
 }
 
 ul#menu li a {
 	display: block;
-	padding: 18px 0;
+	padding: 12px 0;
 }
 
 ul#menu li a.double {
 	display: inline-block;
-	padding: 18px 0;
+	padding: 12px 0;
 }
 
 ul#menu li#root2 {
@@ -159,13 +156,12 @@ input.search:focus, input.search:active {
     background:-moz-linear-gradient(center top , #4e4d50, #b3b3b3) repeat scroll 0 0 #b3b3b3;
     padding: 30px 0px 0px 30px;
     position:absolute;
-    left:105px;
-    top:196px;
+    left:425px;
     z-index: 9999;
     text-align: left;
 }
 
-#dropdown2{left: 632px;padding-right: 30px;
+#dropdown2{left: 770px;padding-right: 30px;
 }
 
 #dropdown ul, #dropdown2 ul{
@@ -228,12 +224,14 @@ FACT
 
 section.fact {
 	display: inline-block;
+	margin-left: 20px;
 }
 
 aside.fact {
 	float: right;
 	width: 215px;
 	font-family: 'Myriad Pro';
+	margin-right: 20px;
 }
 
 aside.fact h2 {
@@ -283,7 +281,7 @@ FORMS
 	box-shadow: 0 0 8px #ffcc33 !important;
 }
 
-.add-form input[type="submit"], span.buttonadd, div.foodprise {
+.add-form input[type="submit"], div.foodprise {
 	padding: 5px;
 	border: 1px solid #ffcc33;
 	background: #fff;
@@ -295,7 +293,7 @@ FORMS
 	cursor: pointer;
 }
 
-.add-form input[type="submit"]:hover, span.buttonadd:hover, div.foodprise:hover {
+.add-form input[type="submit"]:hover, div.foodprise:hover {
 	background: #ffcc33;
 	color: white;
 }
@@ -484,7 +482,6 @@ POP UPS
 	font-size: 12px;
 	display: block;
 	color: gray;
-	margin-top: 10px;
 }
 
 a.return {
@@ -508,7 +505,6 @@ footer{
     width: 1000px;
     font: 19px "Myriad Pro";
     padding-bottom: 40px;
-    margin-top: 40px;
 }
 
 #footer-container{
@@ -585,7 +581,7 @@ UTILITIES
 ICONS
 */
 
-.arrowslider, .f-yellow, .facebook, .logo, .pinterest, .twitter, .user, .payment{ background: url(../img/sprites.png) no-repeat; }
+.arrowslider, .facebook, .pinterest, .twitter, .user, .payment{ background: url(../img/sprites.png) no-repeat; }
 
 a.twitter, a.pinterest, a.facebook {
 	display: block;
@@ -596,24 +592,12 @@ a.twitter, a.pinterest, a.facebook {
 	overflow: hidden;
 }
 
-.logo{
-	background-position: -150px 0;
-	width: 94px;
-	height: 92px;
-}
-
-.logo.floated {
-	float: left;
-	position: relative;
-	z-index: 2;
-}
-
 .user{
 	background-position: 0 -98px ;
 	width: 32px;
 	height: 25px;
 	position: absolute;
-	top: 13px;
+	top: 7px;
 	right: 10px;
 }
 
@@ -621,12 +605,6 @@ a.twitter, a.pinterest, a.facebook {
 	background-position: -100px -100px ;
 	width: 49px;
 	height: 49px;
-}
-
-.f-yellow{
-	background-position: -295px 0;
-	width: 108px;
-	height: 108px;
 }
 
 .facebook{
